# boxmagic-client

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/boxmagic_client/: __init__.py  __main__.py  cli.py  client.py  crypto.py  models.py
tests/: test_client.py  test_models.py
