[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "boxmagic-client"
version = "0.1.0"
description = "Unofficial HTTP client for the Boxmagic Members web API."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Roberto Aguirre" },
]
dependencies = [
  "cryptography>=42.0.0",
  "httpx>=0.27.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.9.2,<1",
]

[project.scripts]
boxmagic = "boxmagic_client.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/boxmagic_client"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
